--- a/src/app/comun/index/index.component.html
+++ b/src/app/comun/index/index.component.html
@@ -7,6 +7,7 @@
 </video>
 -->
 
+<img src="assets/illustration/20.png" class="ilustracionFondo" alt="fondo-montaña">
 <img src="assets/General/Fondo-Papiro.png" class="Fondo-papiro" alt="Fondo-papiro">
 
 <!-- Pantalla de Inicio -->
@@ -18,7 +19,7 @@
 
 
   <div class="contenedorInicioSesion borde1 sombra">
-	  <div class="Texto2 bloque textoIniciarSesion">Inicar sesión</div>
+	  <div class="Texto1 bloque textoIniciarSesion">Iniciar sesión</div>
 	  <hr class="Texto2 bloque separador">
 
       <form class="wrapperInterior" [formGroup]="formLogin">
@@ -43,9 +44,11 @@
       </form>
   </div>
 
+  <!--
   <div id="botonCrearCuenta" class="Texto2" (click)="mostrarCrearCuenta()">
 	Crear Cuenta
   </div>
+  -->
 
  </div>
 
