--- a/src/app/comun/index/index.component.sass
+++ b/src/app/comun/index/index.component.sass
@@ -8,12 +8,16 @@
   min-width: 100%
   z-index: 1
 
+.ilustracionFondo
+  position: absolute
+  width: 100%
+
 .Fondo-papiro
   position: fixed
   width: 100%
   min-height: 100%
   z-index: 2
-  opacity: 1
+  opacity: 0.5
 
 .ContenedorInicio
   position: fixed
@@ -22,10 +26,10 @@
   width: 100vw
   min-height: 100vh
   z-index: 3
-  background-image: url("../../../assets/General/dibujo-fondo.png")
-  background-position: center center
-  background-size: 100% 100%
-  mix-blend-mode: multiply
+  //background-image: url("../../../assets/General/dibujo-fondo.png")
+  //background-position: center center
+  //background-size: 100% 100%
+  //mix-blend-mode: multiply
 
 #error
   color: red
