--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 <app-ajustes></app-ajustes>
 
 <app-index *ngIf="appService.estadoApp == 'index'"></app-index>
+<seleccionPersonajeComponent *ngIf="appService.estadoApp == 'seleccionPersonaje'"></seleccionPersonajeComponent>
 <app-inmap *ngIf="appService.estadoApp == 'inmap'"></app-inmap>
 <app-mazmorra *ngIf="appService.estadoApp == 'mazmorra'"></app-mazmorra>
 <app-desarrollador *ngIf="appService.estadoApp == 'desarrollador'"></app-desarrollador>
