--- a/src/app/comun/seleccion-personaje/seleccion-personaje.component.sass
+++ b/src/app/comun/seleccion-personaje/seleccion-personaje.component.sass
@@ -2,9 +2,150 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
-::ng-deep .contenedorPlantilla
+$anchoContenedor: 25vw 
 
-.contenedorPlantilla
+.Fondo-papiro
+  position: absolute
+  width: 100%
+  height: 100%
+  opacity: 0.5
+
+.ilustracionFondo
+  position: absolute
+  width: 100%
+
+#contenedorLogo
+  position: absolute
+  top: 5%
+  height: 15%
+  width: 100%
+  display: flex
+  justify-content: center
+  .Logo
+    position: relative
+    height: 100%
+
+#iconoConfiguracion
+  position: absolute
+  bottom: 2%
+  left: 2%
+  width: 6%
+
+#contenedorHeroes
+  position: absolute
+  width: 100%
+  height: 85%
+  top: 2%
+  display: flex
+  justify-content: space-evenly
+
+  .contenedorCrearHeroe
+    position: relative
+    display: flex
+    flex-direction: column
+    width: $anchoContenedor 
+    height: 100%
+    background-color: rgba(0,0,0,0.5)
+    color: white
+    justify-content: center
+    align-items: center
+    border-radius: 30px
+    .textoNuevo
+      text-align: center
+    .imagenAdd
+      position: relative
+      width: 40%
+      filter: invert(1)
+
+
+.heroe
+  position: relative
+  display: flex
+  justify-content: center
+  width: $anchoContenedor 
+
+  .nombrePersonaje
+    position: absolute
+    font-size: 30px
+    top: 52%
+    z-index: 1
+    color: $colorTexto
+    text-align: center
+
+  .contenedorImagenHeroe
+    position: absolute
+    width: 80%
+    left: 10%
+    aspect-ratio: 1
+    .frame
+      position: absolute
+      width: 100%
+      left: -4px
+      top: 2px
+    .frameAnimacionesFrame
+        position: absolute
+        height: 120%
+        top: -10%
+        left: -10%
+        border-radius: 0
+        aspect-ratio: 1
+        pointer-events: none
+        z-index: 3
+        overflow: hidden
+        img
+          height: 100%
+    .contenedorInterior
+      position: absolute
+      width: 100%
+      height: 100%
+      clip-path: circle(45%)
+      background-color: $colorFondo1
+      .personaje
+        position: absolute
+        margin-top: 10%
+        width: 100%
+
+  .contenedorBandera
+    position: absolute
+    width: 100%
+    height: 80%
+    top: 20%
+    .bandera
+      position: absolute
+      width: 100%
+      height: 100%
+    .adornoBandera
+      position: absolute
+      width: 100%
+      height: 100%
+
+  .badge
+    position: absolute
+    width: 35%
+    left: 32.5%
+    bottom: 15%
+
+  
+
+.botonEntrar
+  position: absolute
+  width: 20%
+  height: 10%
+  left: 50%
+  bottom: 2%
+  margin-left: -10%
+  z-index: 10
+
+.botonEliminar
+  position: absolute
+  width: 20%
+  height: 10%
+  right: 9%
+  bottom: 2%
+  z-index: 10
+
+
+
 
 
 
