--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -31,7 +31,7 @@
 			<panelEquipoComponent></panelEquipoComponent>
 		</div>
 		<div class="panel panelMazmorra" *ngIf="pantalla =='Mazmorra'">
-			<panelMazmorraComponent></panelMazmorraComponent>
+			<panelUbicacionComponent></panelUbicacionComponent>
 		</div>
 
 		<div class="panel panelMazmorra" *ngIf="pantalla =='Diario'">
