--- a/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
+++ b/src/app/comun/desarrollador/formEventosComponent/formEventos.component.sass
@@ -2,6 +2,13 @@
 @import "../../../../variables.sass"
 @import "../../../../breakpoints.scss"
 
+.botonTest
+  position: absolute
+  width: 10%
+  height: 10%
+  top: 102%
+  left: 45%
+
 
 .botonAddLista
     position: absolute
